# holoCu

./: .gitignore  CMakeLists.txt  README.md
data/marketing/: output.avi
include/: common.h  helper_cuda.h  helpers.hpp  kernels.cuh  optics.h
src/: benchmark.cpp  benchmark.sh  draw_tex.frag  full.cpp  full.sh  headless.cpp  headless.sh  helpers.cpp  kernels.cu  passthrough.vert
